# DLNAMediaDemo

DLNAMediaDemo/: settings.gradle
DLNAMediaDemo/app/: build.gradle
DLNAMediaDemo/app/src/androidTest/java/com/example/dlnamediademo/: ExampleInstrumentedTest.kt
DLNAMediaDemo/app/src/main/: AndroidManifest.xml
DLNAMediaDemo/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
DLNAMediaDemo/app/src/main/java/com/example/dlnamediademo/: DLNAMediaApplication.kt  DeviceInfo.kt  DeviceUpdateBroadcastFactory.java  DeviceUpdateBroadcastReceiver.java  MainActivity.kt  VideoPlayActivity.kt
DLNAMediaDemo/app/src/main/java/com/example/dlnamediademo/center/: DLNAGenaEventBrocastFactory.java  DLNAGenaEventBrocastReceiver.java  DMRCenter.java  DMRWorkThread.java  DlnaMediaModel.java  DlnaMediaModelFactory.java  IBaseEngine.java  IDMRAction.java  MediaControlBrocastFactory.java  MediaControlBrocastReceiver.java  MediaRenderProxy.java
DLNAMediaDemo/app/src/main/java/com/example/dlnamediademo/service/: MediaRenderService.java
DLNAMediaDemo/app/src/main/java/com/example/dlnamediademo/util/: CommonLog.java  CommonUtil.java  DlnaUtils.java  LocalConfigSharePreference.java  LogFactory.java
DLNAMediaDemo/app/src/main/res/layout/: activity_main.xml
DLNAMediaDemo/app/src/main/res/values/: strings.xml  themes.xml
DLNAMediaDemo/app/src/main/res/values-night/: themes.xml
DLNAMediaDemo/app/src/test/java/com/example/dlnamediademo/: ExampleUnitTest.kt
DLNAMediaDemo/gradle/wrapper/: gradle-wrapper.properties
(+2 files in other folders)
